[package]
name = "Overview"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.1" }
tokio = { version = "1.23.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
askama = { version = "0.12.1" }
toml = "0.8.8"
serde = { version = "1.0.152", features = ["derive"] }
lazy_static = "1.4.0"
tower-http = { version = "0.5.0", features = ["fs"] }

[[bin]]
name = "0verview"
path = "src/main.rs"
