[package]
name = "Overview"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.3"
serde = { version = "1.0.194", features = ["derive"] }
tokio = { version = "1.35.1", features = ["full"] }
serde_json = {version = "1.0.110"}
axum-server = {version="0.6.0"}
sqlx = {version="0.7.3", features = ["sqlite", "macros", "runtime-tokio"]}
rusqlite = "0.30.0"


[[bin]]
name = "0verview"
path = "src/main.rs"
